fixed spacing and improved interface

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,18 @@
 }
 a{
     color: #11999E;
+    text-decoration: none;
 }
+a:hover{
+    color: #eaf6f6;
+}
+
 body{
     margin: 0px;
     text-align: center;
     font-family: 'Merriweather', serif;
+    background-color: #E4F9F5;
+    color:#151616;
     
 
 }
@@ -24,13 +31,14 @@ h1{
 h3{
     font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
-    margin: 0px;
+    margin: 4px;
     color: #66BFBF;
     font-weight: normal;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
     color: #11999E;
+    padding-top: 20px;
     
     
     
@@ -44,9 +52,19 @@ div {
     background-color: #E4F9F5;
     position: relative;
     padding-top: 1px;
+    padding-bottom: 30px;
     
 }
+.intro{
+    width: 40%;
+    margin:auto;
+}
 .bottom-container{
+    margin-top: 80px;
+    background-color: #66BFBF;
+    padding: 40px 0px 0px;
+   
+    
     
 }
 .pro{
@@ -63,7 +81,9 @@ div {
 .bottom_cloud{
     position: absolute;
     /*block-size: 80px;*/
-    left:400px;
+    left:380px;
+    
+    
 }
 .programing_img{
     
@@ -78,16 +98,68 @@ div {
    
 }
 hr {
-    border: none;
+    
     height: 2px;
+    border-style: none;
+    border-top: dotted #424141 ;
+    border-width: 10px;
+    width: 10%;
+    height: 0px;
+    
+    
     /* Set the hr color */
-    color: rgb(73, 71, 71); /* old IE */
-    background-color: #333; /* Modern Browsers */
+    
+    margin: 0px;
 }
 .gifs{
     width: 25%;
     float: left;
     margin-right: 30px;
 }
-
+.code_skill_description{
+    clear: left;
+}
+.btn {
+    background: #11999e;
+    background-image: -webkit-linear-gradient(top, #11999e, #2980b9);
+    background-image: -moz-linear-gradient(top, #11999e, #2980b9);
+    background-image: -ms-linear-gradient(top, #11999e, #2980b9);
+    background-image: -o-linear-gradient(top, #11999e, #2980b9);
+    background-image: linear-gradient(to bottom, #11999e, #2980b9);
+    -webkit-border-radius: 9;
+    -moz-border-radius: 9;
+    border-radius: 9px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 11px 21px 10px 20px;
+    text-decoration: none;
+    
+}
+.contact-me{
+    
+}
+.footer-link{
+    
+    
+    margin-left: 30px;
+    margin-top: 40px;
+    margin-right: 30px;
+    font-size: 23px;
+    color:#11999E;
+    
+    
+}
+.hr_center{
+    margin:auto;
+}
+/* .skills{
+    display: flex;
+    flex-direction: column;
+} */
+p{
+   padding-top: 40px;
+    padding-bottom: 40px;
+    margin: 0px;
+}
 
